PYTHON3-EXIV2

Change in 0.6.0  Tue, 05 feb 2019
 * Add the streaming of the preview data

Change in 0.5.0  Wed, 30 Jan 2019
 * Update for libexiv2-0.27

Change in 0.4.0  Mon, 09 Jul 2018
 * Add the property ImageMetadata.buffer

Change in 0.3.0  Thu, 17 May 2018
 * Add some convenient functions

Change in 0.2.0  Fri, 12 Aug 2016
 * Add Preview.data feature

Change in 0.1.0  Mon, 26 Jan 2015
 * First stable release